--- a/tex/complexity_intro.tex
+++ b/tex/complexity_intro.tex
@@ -458,7 +458,7 @@ semplice una soluzione?
 Il certificato per un cammino massimo non è banale: come facciamo a verificare che sia davvero il
 massimo in maniera efficiente? Viceversa è invece banale il certificato per un cammino di lunghezza
 $k$. Questo ammmette una verifica semplice, e questo colloca il problema di cercare un cammino di
-lunghezza $k$ tra due nodi in un grafo in $\NPClass$, che è una classe piccola di problemi
+lunghezza $k$ tra due nodi in un grafo in $\NPClass$, che è una classe più piccola rispetto ai problemi
 esponenziali.
 
 Una volta che abbiamo capito che sta in $\NPClass$ possiamo passare a chiederci se sta anche in
